--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ayushgarg3009/lec2#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^83.0.0",
+    "request": "^2.88.2",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
